US Airways customer sentiment analysis based on their feedback.

--- a/AI_Application_Case_Study_Airline_Customer_Sentiment_Analysis.ipynb
+++ b/AI_Application_Case_Study_Airline_Customer_Sentiment_Analysis.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/suhaibkq/USAirwaysCustomerSentimentAnalysis/blob/main/AI_Application_Case_Study_Airline_Customer_Sentiment_Analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "sGRM-YOY3ma9"
       },
       "source": [
@@ -3679,22 +3669,12 @@
         "- Once the AI solution was implemented, the airline were able to take some quick actions to improve their operations. This helped in bringing down the customer dissatisfaction rate slightly to ~37%\n",
         "- Gradually, the airline took strategic decisions to make significant changes in optimizing operations and conducted multiple staff trainings. This helped in bringing down the customer dissatisfaction rate further to ~30%"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Note**: The numbers above are indicative in nature."
-      ],
-      "metadata": {
-        "id": "dXbumIWnjKio"
-      }
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
